lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dori3
  name: dori3
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: dori3
  type: ClusterIP
