lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dori3
spec:
  ingressClassName: nginx
  rules:
    - host: dori3.usacheva.com
      http:
        paths:
          - backend:
              service:
                name: dori3
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
  - hosts:
    - dori.usacheva.com
    secretName: tls-cert
